# fault-watch

./: .env  .env-copy  .gitignore  .npmrc  README.md  docker-compose.yml  package.json  pnpm-workspace.yaml
.cursor/: tasks.md
backend/: Dockerfile  alembic.ini  celerybeat-schedule  config.py  pyproject.toml  start.sh  temporal_config.py  temporal_worker.py  test_imports.py  workflow_config.py
backend/api/: __init__.py  main.py
backend/api/api_keys/: __init__.py  controller.py  schema.py  service.py
backend/api/auth/: __init__.py  dependencies.py
backend/api/db/: base.py
backend/api/db/migrations/: env.py
backend/api/db/migrations/versions/: 2025_06_11_03_02_ab5d0b9b64c7.py
backend/api/errors/: controller.py  fingerprinting.py  schema.py  service.py
backend/api/groups/: controller.py  schema.py  service.py
backend/api/organizations/: __init__.py  controller.py  schema.py  service.py
backend/api/projects/: __init__.py  controller.py  schema.py  service.py
backend/celery_app/: __init__.py  main.py
backend/db/: __init__.py  base.py  session.py
backend/db/migrations/: env.py
backend/db/migrations/versions/: 2025_06_11_16_42_b0d579c3e099.py  2025_06_12_16_36_ff401bf5a34d.py  2025_06_12_16_52_17278b0c3e60.py  2025_06_26_08_23_d4a08b7a2f4b.py  2025_07_16_11_32_2f0ade56ac21.py
backend/db/models/: __init__.py  api_keys.py  errors.py  groups.py  organizations.py  projects.py
backend/db/repositories/: api_keys.py  errors.py  groups.py  organizations.py  projects.py
backend/tasks/: error_processing.py
backend/workflows/: error_processing.py
(+3 files in other folders)
